# agilitysdk_rs

./: .gitignore  Cargo.toml  TODO.txt
.metadata/: d3d12.manual.cs  emitter.settings.rsp  functionPointerFixups.json  generate.proj  libMappings.rsp  main.cpp  scraper.header.txt
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
src/: d3d12.rs  lib.rs
